--- a/Mapplas/Mapplas/AppsViewController.xib
+++ b/Mapplas/Mapplas/AppsViewController.xib
@@ -12,7 +12,7 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
-			<string>IBUIActivityIndicatorView</string>
+			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUITableView</string>
 			<string>IBUIView</string>
@@ -67,7 +67,7 @@
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace" id="339277612">
+					<object class="NSColorSpace" key="NSCustomColorSpace" id="672694436">
 						<int key="NSID">2</int>
 					</object>
 				</object>
@@ -77,16 +77,17 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="541861626">
+			<object class="IBUIView" id="942826107">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUILabel" id="396565094">
-						<reference key="NSNextResponder" ref="541861626"/>
+					<object class="IBUILabel" id="446311454">
+						<reference key="NSNextResponder" ref="942826107"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 26}, {280, 21}}</string>
-						<reference key="NSSuperview" ref="541861626"/>
+						<reference key="NSSuperview" ref="942826107"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="661515796"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -116,33 +117,30 @@
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIActivityIndicatorView" id="363045541">
-						<reference key="NSNextResponder" ref="541861626"/>
+					<object class="IBUIImageView" id="661515796">
+						<reference key="NSNextResponder" ref="942826107"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{44, 26}, {20, 20}}</string>
-						<reference key="NSSuperview" ref="541861626"/>
+						<string key="NSFrame">{{20, 12}, {50, 50}}</string>
+						<reference key="NSSuperview" ref="942826107"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="396565094"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<bool key="IBUIHidesWhenStopped">NO</bool>
-						<int key="IBUIStyle">2</int>
-						<object class="NSColor" key="IBUIColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjEyOTQxMTc2NDcAA</bytes>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">ic_refresh.png</string>
 						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 72}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="363045541"/>
+				<reference key="NSNextKeyView" ref="446311454"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="339277612"/>
+					<reference key="NSCustomColorSpace" ref="672694436"/>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
@@ -169,25 +167,25 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cellLoading</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="541861626"/>
+						<reference key="destination" ref="942826107"/>
 					</object>
 					<int key="connectionID">25</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">loading</string>
+						<string key="label">loadingText</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="363045541"/>
+						<reference key="destination" ref="446311454"/>
 					</object>
-					<int key="connectionID">26</int>
+					<int key="connectionID">28</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">loadingText</string>
+						<string key="label">loading</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="396565094"/>
+						<reference key="destination" ref="661515796"/>
 					</object>
-					<int key="connectionID">28</int>
+					<int key="connectionID">30</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -225,23 +223,23 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="541861626"/>
+						<reference key="object" ref="942826107"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="363045541"/>
-							<reference ref="396565094"/>
+							<reference ref="446311454"/>
+							<reference ref="661515796"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Loading cell</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">21</int>
-						<reference key="object" ref="363045541"/>
-						<reference key="parent" ref="541861626"/>
+						<int key="objectID">27</int>
+						<reference key="object" ref="446311454"/>
+						<reference key="parent" ref="942826107"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">27</int>
-						<reference key="object" ref="396565094"/>
-						<reference key="parent" ref="541861626"/>
+						<int key="objectID">29</int>
+						<reference key="object" ref="661515796"/>
+						<reference key="parent" ref="942826107"/>
 					</object>
 				</array>
 			</object>
@@ -252,15 +250,15 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">28</int>
+			<int key="maxID">30</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -269,7 +267,7 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="cellLoading">UIView</string>
-						<string key="loading">UIActivityIndicatorView</string>
+						<string key="loading">UIImageView</string>
 						<string key="loadingText">UILabel</string>
 						<string key="table">UITableView</string>
 					</dictionary>
@@ -280,7 +278,7 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="loading">
 							<string key="name">loading</string>
-							<string key="candidateClassName">UIActivityIndicatorView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="loadingText">
 							<string key="name">loadingText</string>
@@ -306,6 +304,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">ic_refresh.png</string>
+			<string key="NS.object.0">{64, 64}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
 </archive>
