--- a/Mapplas/Mapplas/classes/AppDetailViewController.xib
+++ b/Mapplas/Mapplas/classes/AppDetailViewController.xib
@@ -173,11 +173,11 @@
 						<reference key="IBUIHighlightedColor" ref="922888560"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="230149617">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="334961069">
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
@@ -190,7 +190,7 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="179776780"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<object class="NSColor" key="IBUIBackgroundColor" id="492556960">
+				<object class="NSColor" key="IBUIBackgroundColor" id="66997051">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MCAwAA</bytes>
 				</object>
@@ -467,19 +467,19 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="53311283"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="492556960"/>
+				<reference key="IBUIBackgroundColor" ref="66997051"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="781475193">
+			<object class="IBUIView" id="960622513">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="317474314">
-						<reference key="NSNextResponder" ref="781475193"/>
+						<reference key="NSNextResponder" ref="960622513"/>
 						<int key="NSvFlags">288</int>
 						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrameSize">{320, 200}</string>
-						<reference key="NSSuperview" ref="781475193"/>
+						<reference key="NSSuperview" ref="960622513"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="420504060"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -4870,7 +4870,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 										</object>
 									</array>
 								</array>
-								<reference key="NSColor" ref="492556960"/>
+								<reference key="NSColor" ref="66997051"/>
 							</object>
 							<string key="IBUIColorCocoaTouchKeyPath">scrollViewTexturedBackgroundColor</string>
 						</object>
@@ -4878,10 +4878,10 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIScrollView" id="420504060">
-						<reference key="NSNextResponder" ref="781475193"/>
+						<reference key="NSNextResponder" ref="960622513"/>
 						<int key="NSvFlags">288</int>
 						<string key="NSFrame">{{20, 0}, {280, 200}}</string>
-						<reference key="NSSuperview" ref="781475193"/>
+						<reference key="NSSuperview" ref="960622513"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -4913,7 +4913,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBUILabel" id="829430656">
 						<reference key="NSNextResponder" ref="53944536"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 4}, {302, 115}}</string>
+						<string key="NSFrame">{{10, 4}, {302, 20}}</string>
 						<reference key="NSSuperview" ref="53944536"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545054758"/>
@@ -4923,20 +4923,30 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Get ready to see pigs fly! From the creators of Angry Birds: an all game from the PIGS point of view! 'Extremely fun and very challenging' -- Kotaku ku 'Bad piggies is awesome, and needs tobe a part of your iOS game collection just as much as the rest of the...'</string>
-						<reference key="IBUITextColor" ref="575876358"/>
+						<string key="IBUIText">Get ready to see pigs fly! From the creators...</string>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjEyOTQxMTc2NDcAA</bytes>
+						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">6</int>
-						<reference key="IBUIFontDescription" ref="230149617"/>
-						<reference key="IBUIFont" ref="334961069"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">3</int>
+							<double key="pointSize">14</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Oblique</string>
+							<double key="NSSize">14</double>
+							<int key="NSfFlags">16</int>
+						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<double key="preferredMaxLayoutWidth">302</double>
 					</object>
 					<object class="IBUIButton" id="545054758">
 						<reference key="NSNextResponder" ref="53944536"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{277, 116}, {38, 10}}</string>
+						<int key="NSvFlags">265</int>
+						<string key="NSFrame">{{274, 27}, {38, 10}}</string>
 						<reference key="NSSuperview" ref="53944536"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -4959,25 +4969,25 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<reference key="IBUIFont" ref="378000361"/>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 126}</string>
+				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="829430656"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="492556960"/>
+				<reference key="IBUIBackgroundColor" ref="66997051"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="108117367">
+			<object class="IBUIView" id="1015512468">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUILabel" id="120835141">
-						<reference key="NSNextResponder" ref="108117367"/>
+					<object class="IBUILabel" id="279854471">
+						<reference key="NSNextResponder" ref="1015512468"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 10}, {280, 21}}</string>
-						<reference key="NSSuperview" ref="108117367"/>
+						<reference key="NSSuperview" ref="1015512468"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="554876684"/>
+						<reference key="NSNextKeyView" ref="742723537"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -5000,13 +5010,13 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIButton" id="554876684">
-						<reference key="NSNextResponder" ref="108117367"/>
+					<object class="IBUIButton" id="742723537">
+						<reference key="NSNextResponder" ref="1015512468"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 35}, {150, 44}}</string>
-						<reference key="NSSuperview" ref="108117367"/>
+						<reference key="NSSuperview" ref="1015512468"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="726283189"/>
+						<reference key="NSNextKeyView" ref="199935074"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -5023,13 +5033,13 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<reference key="IBUIFontDescription" ref="888530213"/>
 						<reference key="IBUIFont" ref="378000361"/>
 					</object>
-					<object class="IBUIButton" id="726283189">
-						<reference key="NSNextResponder" ref="108117367"/>
+					<object class="IBUIButton" id="199935074">
+						<reference key="NSNextResponder" ref="1015512468"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{165, 35}, {150, 44}}</string>
-						<reference key="NSSuperview" ref="108117367"/>
+						<reference key="NSSuperview" ref="1015512468"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="992946729"/>
+						<reference key="NSNextKeyView" ref="204421074"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -5046,11 +5056,11 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<reference key="IBUIFontDescription" ref="888530213"/>
 						<reference key="IBUIFont" ref="378000361"/>
 					</object>
-					<object class="IBUIButton" id="992946729">
-						<reference key="NSNextResponder" ref="108117367"/>
+					<object class="IBUIButton" id="204421074">
+						<reference key="NSNextResponder" ref="1015512468"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{85, 86}, {150, 44}}</string>
-						<reference key="NSSuperview" ref="108117367"/>
+						<reference key="NSSuperview" ref="1015512468"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -5089,9 +5099,9 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<string key="NSFrameSize">{320, 149}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="120835141"/>
+				<reference key="NSNextKeyView" ref="279854471"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="492556960"/>
+				<reference key="IBUIBackgroundColor" ref="66997051"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -5245,7 +5255,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">galleryView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="781475193"/>
+						<reference key="destination" ref="960622513"/>
 					</object>
 					<int key="connectionID">626</int>
 				</object>
@@ -5293,7 +5303,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">asistencyButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="992946729"/>
+						<reference key="destination" ref="204421074"/>
 					</object>
 					<int key="connectionID">634</int>
 				</object>
@@ -5301,7 +5311,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">developerLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="120835141"/>
+						<reference key="destination" ref="279854471"/>
 					</object>
 					<int key="connectionID">635</int>
 				</object>
@@ -5309,7 +5319,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">devEmailButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="726283189"/>
+						<reference key="destination" ref="199935074"/>
 					</object>
 					<int key="connectionID">636</int>
 				</object>
@@ -5317,7 +5327,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">devWebButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="554876684"/>
+						<reference key="destination" ref="742723537"/>
 					</object>
 					<int key="connectionID">637</int>
 				</object>
@@ -5325,7 +5335,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">supportView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="108117367"/>
+						<reference key="destination" ref="1015512468"/>
 					</object>
 					<int key="connectionID">638</int>
 				</object>
@@ -5486,7 +5496,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">624</int>
-						<reference key="object" ref="781475193"/>
+						<reference key="object" ref="960622513"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="317474314"/>
 							<reference ref="420504060"/>
@@ -5498,15 +5508,15 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<int key="objectID">610</int>
 						<reference key="object" ref="317474314"/>
 						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="781475193"/>
+						<reference key="parent" ref="960622513"/>
 						<string key="objectName">Image gallery enhancer</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">617</int>
 						<reference key="object" ref="53944536"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="545054758"/>
 							<reference ref="829430656"/>
+							<reference ref="545054758"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Description</string>
@@ -5526,43 +5536,43 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBObjectRecord">
 						<int key="objectID">608</int>
 						<reference key="object" ref="420504060"/>
-						<reference key="parent" ref="781475193"/>
+						<reference key="parent" ref="960622513"/>
 						<string key="objectName">Image gallery</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">633</int>
-						<reference key="object" ref="108117367"/>
+						<reference key="object" ref="1015512468"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="120835141"/>
-							<reference ref="554876684"/>
-							<reference ref="726283189"/>
-							<reference ref="992946729"/>
+							<reference ref="279854471"/>
+							<reference ref="742723537"/>
+							<reference ref="199935074"/>
+							<reference ref="204421074"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Support</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">629</int>
-						<reference key="object" ref="120835141"/>
-						<reference key="parent" ref="108117367"/>
+						<reference key="object" ref="279854471"/>
+						<reference key="parent" ref="1015512468"/>
 						<string key="objectName">Developer label</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">630</int>
-						<reference key="object" ref="554876684"/>
-						<reference key="parent" ref="108117367"/>
+						<reference key="object" ref="742723537"/>
+						<reference key="parent" ref="1015512468"/>
 						<string key="objectName">Developer web button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">631</int>
-						<reference key="object" ref="726283189"/>
-						<reference key="parent" ref="108117367"/>
+						<reference key="object" ref="199935074"/>
+						<reference key="parent" ref="1015512468"/>
 						<string key="objectName">Developer email button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">632</int>
-						<reference key="object" ref="992946729"/>
-						<reference key="parent" ref="108117367"/>
+						<reference key="object" ref="204421074"/>
+						<reference key="parent" ref="1015512468"/>
 						<string key="objectName">Asistency button</string>
 					</object>
 				</array>
